--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ torch>=1.9.0
 torchvision>=0.10.0
 tensorflow>=2.6.0
 
-# Quantum computing
-qiskit>=0.34.0
-pennylane>=0.24.0
-cirq>=0.14.0
+# Quantum computing (IMPORTANT: specific versions for compatibility)
+qiskit>=0.45.0,<1.0.0
+qiskit-machine-learning>=0.6.0,<0.8.0
+qiskit-algorithms>=0.2.0,<0.3.0
 
 # Jupyter notebooks
 jupyter>=1.0.0
